# CnC_Renegade

./: .gitignore  CMakePresets.json
Code/Combat/: CMakeLists.txt  action.cpp  animcontrol.cpp  animcontrol.h  basegameobj.h  clientcontrol.h  csdamageevent.h  humanstate.cpp  humanstate.h  scexplosionevent.h  scobeliskevent.h  smartgameobj.cpp  soldier.cpp  soldier.h  soldierobserver.cpp  weapons.cpp
Code/Commando/: AnnounceEvent.h  NAT.cpp  bioevent.h  changeteamevent.h  clientbboevent.h  clientfps.h  clientgoodbyeevent.h  consolecommandevent.h  csconsolecommandevent.h  cshint.h  cspingrequestevent.h  cstextobj.h  dlgmainmenu.cpp  donateevent.h  evictionevent.h  gamedataupdateevent.h  gameoptionsevent.h  gamespycschallengeresponseevent.h  gamespyscchallengeevent.h  godmodeevent.h  loadingevent.h  messages.cpp  moneyevent.h  netevent.h  player.h  playerkill.h  purchaserequestevent.h  purchaseresponseevent.h  requestkillevent.h  scoreevent.h  scpingresponseevent.h  sctextobj.h  suicideevent.h  svrgoodbyeevent.h  team.h  vipmodeevent.h  warpevent.h  winevent.h
Code/Tools/WWConfig/: AudioConfigDialog.cpp  DriverVersionWarning.cpp  LocaleDefs.h  Locale_API.cpp  PerformanceConfigDialog.cpp  (+4 more)
Code/WWOnline/: WOLSession.cpp
Code/ww3d2/: dx8wrapper.cpp  dx8wrapper.h  shader.cpp
Code/wwlib/: wwstring.cpp
Code/wwnet/: BWBalance.cpp  BWBalance.h  CMakeLists.txt  connect.cpp  connect.h  netstats.cpp  netstats.h  netutil.cpp  netutil.h  networkobject.cpp  networkobject.h  packetmgr.cpp  packetmgr.h  socket_wrapper.h  socket_wrapper_posix.cpp  socket_wrapper_win32.cpp
